Fixing bottom bar spacing and last url bug

--- a/production/css/bootstrap-simple.css
+++ b/production/css/bootstrap-simple.css
@@ -154,7 +154,7 @@ audio {
 }
 
 .bottom-bar-container {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .location-link:hover {
